[tool.poetry]
name = "alien_worlds"
version = "0.1.0"
description = ""
authors = ["Joshua Dunnink <Joshua.Dunnink@ing.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.0"
flake8 = "^4.0.1"
black = "^21.12b0"
bandit = "^1.7.1"
webdriver-manager = "^3.5.2"
geckodriver-autoinstaller = "^0.1.0"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
